Implement copper oxidisation and waxing